TODO: catch AE::xxx for anyevent strict and anyevent debug
TODO: anyevent::trace? or debug tracing all watchers?
TODO: anyevent strict checking for $_ changes?

TODO: redesign Impl
TODO: make ae::run mroe robust against eintr, Andrew Suffield
TODO: IO::Async sometimes cancels the wrong timer when you call cancel_timer -wait for IO::Async release.
TODO: wrap
TODO: shell on env
TODO: FLTK docs
	- INCOMPATIBLE CHANGE: AnyEvent::DNS resource records now include
          the TTL as fourth element - this affects ->resolve directly,
          and ->request and ->dns_unpack indirectly. Convenience functions
          such as AnyEvent::DNS::{a,txt,mx,srv} are not affected.
        - INCOMPATIBLE CHANGE: backend authors now should not implement
          one_event or loop, but instead the AnyEvent::CondVar::_wait and _poll
          methods.
        - DEPRECIATION: please change
          "use AnyEvent::Impl::Perl" to "use AnyEvent::Loop" and
          "AnyEvent::Impl::Perl::loop" to "AnyEvent::Loop::run"
          in your programs, for future compatibility.
        - *blush* idle watcher emulation was borked.
        - AnyEvent::Strict now checks the AE::xxx functions as well.
        - querying too long domain names would barf deep inside AnyEvent::DNS - since
          this is hard to avoid for applications, AnyEvent:.DNS::request now checks for
          for too long domain names explicitly and passes an undef to the callback
          instead (reported by James Bromberger).
        - new function: AnyEvent::postpone.
        - IO::Async sometimes cancels the wrong timer when you call cancel_timer.
          Invest extra overhead to work around this peculiar behaviour.
        - split the pure perl backend into a loop module and an impl
          module (AnyEvent::Loop and AnyEvent::Impl::Perl).
        - some read types (regex, netstring, json, storable) could
          errornously keep an AE::Handle object alive on their own
          (reported by Mohammad Toossi).